<resources>
    <string name="app_name">NET-אינטליג</string>
    <string name="ad">פרסומת</string>
    <string name="disconnect">התנתק</string>




    <!-- Strings related to sudoku -->
    <string name="easyTab">קל</string>
    <string name="mediumTab">בינוני</string>
    <string name="hardTab">קשה</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tashchez_pl">TashchezPL</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="usernameLogin">שם משתמש</string>
    <string name="passwordLogin">סיסמה</string>
    <string name="loginBtn">הכנס</string>
    <string name="signUpPageBtn"> <![CDATA[אין לך חשבון?<b><font color=#0c9910> הרשם כאן</b>.]]></string>
    <string name="guestBtn"> <![CDATA[לכניסת אורח<b><font color=#b20000> לחץ כאן</b>.]]></string>
    <string name="errUsernamelimits">שם משתמש חייב להיות בין 5 ל15 תווים</string>
    <string name="errPasswordlimits">סיסמה חייבת להיות בין 5 ל15 תויים</string>
    <string name="errPasswordConfirmLimits">הסיסמאות אינן זהות</string>
    <string name="errUsernameEmpty">אנא מלא שם משתמש</string>
    <string name="errPasswordEmpty">אנא מלא סיסמה</string>
    <string name="errWrongPassOrUser">שם משתמש או סיסמה לא נכונים</string>








    <!-- Strings related to sign up -->
    <string name="usernameSignup">שם משתמש: 5-15 תווים</string>
    <string name="passwordSignup">סיסמה: 5-15 תווים</string>
    <string name="passwordConfirmSignup">חזור על הסיסמה</string>
    <string name="firstName">שם פרטי</string>
    <string name="createAccountBtn">צור חשבון</string>
    <string name="loginPageBtn"> <![CDATA[יש לך חשבון?<b><font color=#0c9910>  הכנס כאן</b>.]]></string>
    <string name="lastName">שם משפחה</string>
    <string name="year">שנה</string>
    <string name="month">חודש</string>
    <string name="day">יום</string>
    <string name="gender">מין: זכר או נקבה</string>
    <string name="errFirstNamelimits">שם פרטי חייב להיות בין 2 ל15 תווים</string>
    <string name="errLastNamelimits">שם משפחה חייב להיות בין 2 ל15 תווים</string>
    <string name="errBirthdayInvalid">אנא הזן תאריך תקני</string>
    <string name="errGenderInvalid">הכנס "זכר" או "נקבה"</string>



    <!--ads-->
    <string name="banner_ad_unit_id">/6499/example/banner</string>


    <!--dialogs-->
    <string name="twoDevicesLoginDialog">"משתמש יקר, אינך יכול להכנס לחשבון זה מכיוון מכיוון שהוא כבר מחובר במכשיר אחר./nתוכל להתנתק מהחשבון במכשיר השני או להשתמש ב"כניסת אורח"."</string>
    
    <!--odot activity-->
    <string name="odotLine1">זאב פרנק</string>
    <string name="odotLine2">חידונאי ותשבצאי</string>
    <string name="odotLine3">עורך ומגיש תכניות חידונים ושעשועונים</string>
    <string name="odotLine4">מחבר חוברות תשבצים ושעשועונים</string>
    <string name="odotContact">ליצירת קשר:</string>
    <string name="odotWebsite">www.zeevfrank.co.il</string>
    <string name="odotMail">zeevfrank1@gmail.co.il</string>
    <string name="odotMobile">0522504115</string>
</resources>
