<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matan.intellignet.SignupActivity"
    android:orientation="vertical"
    android:id="@+id/linearLay"
    android:focusable="false"
    android:nestedScrollingEnabled="false">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:src="@drawable/ic_cover"
        android:background="#f4f4f4"
        android:id="@+id/symbolImage" />


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="28"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="stateVisible|adjustResize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">



        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/input_password"
                android:inputType="textEmailAddress"
                android:hint="@string/usernameSignup" />
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passwordSignup"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password confirm Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passwordConfirmSignup"/>
        </android.support.design.widget.TextInputLayout>

        <!--  First name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/firstName" />
        </android.support.design.widget.TextInputLayout>


        <!-- Last name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastName"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Birthday Label -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/input_birthday">

            <!-- year -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="4"
                android:inputType="date"
                android:hint="@string/year"/>
        </android.support.design.widget.TextInputLayout>


            <!-- month -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="2"
                android:nextFocusRight="@id/input_year"
                android:inputType="date"
                android:hint="@string/month"/>
        </android.support.design.widget.TextInputLayout>

            <!-- day -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="2"
                android:nextFocusRight="@id/input_month"
                android:inputType="date"
                android:hint="@string/day"/>
        </android.support.design.widget.TextInputLayout>
        </LinearLayout>



        <!-- Gender Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp">
            <EditText android:id="@+id/input_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/gender"/>
        </android.support.design.widget.TextInputLayout>


        <ProgressBar
            android:id="@+id/progress_bar_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">
        </ProgressBar>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="8dp"
            android:padding="3dp"
            android:text="@string/createAccountBtn"/>
z
        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/loginPageBtn"
            android:gravity="center"
            android:textSize="16dip"/>

        <TextView android:id="@+id/link_guest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:text="@string/guestBtn"
            android:gravity="center|bottom"
            android:textSize="16dip"/>

    </LinearLayout>

</ScrollView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/ad"
        android:gravity="center"
        android:background="#f4f4f4"
        android:id="@+id/adText" />


    </LinearLayout>