<?xml version="1.0" encoding="utf-8"?>



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matan.intellignet.LoginActivity"
    android:orientation="vertical"
    android:id="@+id/linearLay"
    >



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="5"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:src="@drawable/ic_cover"
        android:background="#f4f4f4"
        android:id="@+id/symbolImage" />


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0px"
    android:layout_weight="28"
    android:fitsSystemWindows="true">





    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40px"
        android:paddingLeft="80px"
        android:paddingRight="80px">





        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16px"
            android:layout_marginBottom="16px">
            <EditText android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint= "@string/usernameLogin"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16px"
            android:layout_marginBottom="16px">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/passwordLogin"/>
        </android.support.design.widget.TextInputLayout>



        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone">
        </ProgressBar>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24px"
            android:layout_marginBottom="24px"
            android:padding="12px"
            android:text="@string/loginBtn"/>


        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24px"
            android:text="@string/signUpPageBtn"
            android:gravity="center"
            android:textSize="16dip"/>


        <TextView android:id="@+id/link_guest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24px"
            android:text="@string/guestBtn"
            android:gravity="center"
            android:textSize="16dip"/>




    </LinearLayout>



</ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="3"
        android:text="@string/ad"
        android:gravity="center"
        android:background="#f4f4f4"
        android:id="@+id/adText" />

</LinearLayout>



